# docs/openapi.yml
@@ -102,6 +102,29 @@ paths:
                   type: object 
                   properties:
                     access: {type: string,example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYzNDU4NjAxLCJpYXQiOjE3NjI4NTM4MDEsImp0aSI6IjYzMDkzZmE4NDQ5OTQ5N2JhMmZjZmFjN2E3ZjU2YTdjIiwidXNlcm5hbWUiOiJhZG1pbjIifQ.4IOwx_VK6RkoNG-njQAy_40ePeKc46-hzFiQw8tU2Vg}
+
+  /auth/email/verify/request/:
+    post:
+      tags: [Authentication]
+      summary: Verify email request for otp
+      description: Confirms and verifies the user's email address.
+      parameters:
+        - name: Authorization
+          in: header
+          required: true
+          description: Bearer token for authentication
+          schema:
+            type: string
+            example: "Bearer <token>"
+      requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                    email: {type: string, example: example@gmail.com}
+                    
   /auth/email/verify/conform/:
     post:
       tags: [Authentication]
@@ -212,7 +235,8 @@ paths:
                 schema:
                   type: object 
                   properties:
-                    detail: {type: string, example: OTP verified successfully}
+                    refresh: {type: string,example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYzNDU4NjAxLCJpYXQiOjE3NjI4NTM4MDEsImp0aSI6IjYzMDkzZmE4NDQ5OTQ5N2JhMmZjZmFjN2E3ZjU2YTdjIiwidXNlcm5hbWUiOiJhZG1pbjIifQ.4IOwx_VK6RkoNG-njQAy_40ePeKc46-hzFiQw8tU2Vg}
+                    access: {type: string,example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYzNDU4NjAxLCJpYXQiOjE3NjI4NTM4MDEsImp0aSI6IjYzMDkzZmE4NDQ5OTQ5N2JhMmZjZmFjN2E3ZjU2YTdjIiwidXNlcm5hbWUiOiJhZG1pbjIifQ.4IOwx_VK6RkoNG-njQAy_40ePeKc46-hzFiQw8tU2Vg}
             
   /auth/password/forgot/otp/reset/:
     post:
@@ -904,6 +928,7 @@ paths:
         - `create`: Sent when a new inventory is created.
         - `update`: Sent when an existing inventory is updated.
         - `delete`: Sent when an inventory is deleted.
+        - `error` : When the username does not exist or user cannot access inventories.
 
       parameters:
         - name: username
@@ -931,11 +956,17 @@ paths:
                       - id: "52d37c63-7607-4208-a261-24b626f008a8"
                         name: "A"
                         priority: "High"
-                        user_username: "admin"
+                        number: 5
+                        user: "admin"
+                        category: "Electronics"
+                        created_at: "2025-11-19 12:00:00"
                       - id: "751a58fc-bfa8-4d6a-9dd7-5cbdb23f8080"
                         name: "B"
                         priority: "High"
-                        user_username: "admin1"
+                        number: 5
+                        user: "admin1"
+                        category: "Electronics"
+                        created_at: "2025-11-19 12:00:00"
                     server_time: "2025-11-19 12:00:00"
 
                 create_event:
@@ -944,10 +975,27 @@ paths:
                     type: "inventory_event"
                     event: "create"
                     inventories:
+                      - id: "52d37c63-7607-4208-a261-24b626f008a8"
+                        name: "A"
+                        priority: "High"
+                        number: 5
+                        user: "admin"
+                        category: "Electronics"
+                        created_at: "2025-11-19 12:00:00"
+                      - id: "751a58fc-bfa8-4d6a-9dd7-5cbdb23f8080"
+                        name: "B"
+                        priority: "High"
+                        number: 5
+                        user: "admin1"
+                        category: "Electronics"
+                        created_at: "2025-11-19 12:00:00"
                       - id: "a1b2c3d4-5678-9101-1121-314151617181"
                         name: "C"
                         priority: "Medium"
-                        user_username: "admin"
+                        number: 5
+                        user: "admin1"
+                        category: "Electronics"
+                        created_at: "2025-11-19 12:00:00"
                     server_time: "2025-11-19 12:05:00"
 
                 update_event:
@@ -959,7 +1007,10 @@ paths:
                       - id: "52d37c63-7607-4208-a261-24b626f008a8"
                         name: "A+"
                         priority: "High"
-                        user_username: "admin"
+                        number: 5
+                        user: "admin"
+                        category: "Electronics"
+                        created_at: "2025-11-19 12:00:00"
                     server_time: "2025-11-19 12:10:00"
 
                 delete_event:
@@ -971,10 +1022,18 @@ paths:
                       - id: "751a58fc-bfa8-4d6a-9dd7-5cbdb23f8080"
                         name: "B"
                         priority: "High"
-                        user_username: "admin1"
+                        number: 5
+                        user: "admin1"
+                        category: "Electronics"
+                        created_at: "2025-11-19 12:00:00"
                     server_time: "2025-11-19 12:15:00"
 
- 
+                error_event:
+                  summary: Error when wrong username is provided
+                  value:
+                    event: "error"
+                    message: "User with username 'admin69' does not exist."
+                    server_time: "2025-11-22 16:30:29"
 
 
 
@@ -1074,9 +1133,18 @@ components:
               priority:
                 type: string
                 description: Inventory priority
-              user_username:
+              number:
+                type: integer
+                description: Inventory number
+              user:
                 type: string
                 description: Owner of the inventory
+              category:
+                type: string
+                description: Inventory category
+              created_at:
+                type: string
+                description: Inventory created timestamp
         server_time:
           type: string
           format: date-time
